--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.2",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
